# tictactoe

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  bibucket-pipelines.yml  bitbucket-pipelines.yml
Classes/: AI.cc  AI.h  AppDelegate.cpp  AppDelegate.h  Definitions.h  GameLogic.cc  GameLogic.h  GameOver.cpp  GameOver.h  GameScene.cpp  GameScene.h  GameUtil.cpp  GameUtil.h  HelloWorldScene.cpp  HelloWorldScene.h  HumanPlayer.cpp  HumanPlayer.h  MainMenuScene.cpp  MainMenuScene.h  Player.h  SplashScene.cpp  SplashScene.h
Classes/game_logic/: AI.cc  AI.h  GameLogic.cc  GameLogic.h  GameUtil.cpp  GameUtil.h  HumanPlayer.cpp  HumanPlayer.h  Player.h
Classes/game_logic/test/: CMakeLists.txt  GameLogicTest.cpp  GameTest.cpp  HumanPlayerTest.cpp
Classes/scene/: Definitions.h  GameOver.cpp  GameOver.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  SplashScene.cpp  SplashScene.h
Classes/test/: CMakeLists.txt  GameLogicTest.cpp  GameTest.cpp  HumanPlayerTest.cpp
cmake/: gmock_download.cmake  gmock_init.cmake
tools/: pre-push
